# cmake-min-use

./: .gitignore  CMakeLists.txt  CMakePresets.json  hello.cpp  hello.hpp  main.cpp
